--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,15 @@ const ogImage = logoSrc.startsWith('http') ? logoSrc : `${siteUrl}${logoSrc}`;
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
-    <script defer src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=T7LKGL"></script>
+       <!-- Klaviyo bootstrapper: queues calls until klaviyo.js loads -->
+       <script>
+        !function(){if(!window.klaviyo){window._klOnsite=window._klOnsite||[];try{window.klaviyo=new Proxy({},{get:function(n,i){return"push"===i?function(){var n;(n=window._klOnsite).push.apply(n,arguments)}:function(){for(var n=arguments.length,o=new Array(n),w=0;w<n;w++)o[w]=arguments[w];var t="function"==typeof o[o.length-1]?o.pop():void 0,e=new Promise((function(n){window._klaviyoQueueResult=n}));return window._klOnsite.push([i].concat(o,[function(i){t&&t(i),window._klaviyoQueueResult&&window._klaviyoQueueResult(i)}])),e}}})}catch(n){window.klaviyo=window.klaviyo||[],window.klaviyo.push=function(){var n;(n=window._klOnsite).push.apply(n,arguments)}}}}();
+      </script>
+  
+      <!-- Klaviyo onsite script -->
+      <script defer src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=T7LKGL"></script>
+  
+    
 
     <!-- Shopify SDK (kept) -->
     <script src="https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js"></script>
