--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const ogImage = logoSrc.startsWith('http') ? logoSrc : `${siteUrl}${logoSrc}`;
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="facebook-domain-verification" content="2qk7on2sqsq981uarfqemjo3fmh8u8" />
     <meta name="p:domain_verify" content="6246a8dca9fae665fe60a7642143f89d"/>
     <meta charset="UTF-8" />
     <meta name="description" content={metaDescription} />
