--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const ogImage = logoSrc.startsWith('http') ? logoSrc : `${siteUrl}${logoSrc}`;
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta name="facebook-domain-verification" content="2qk7on2sqsq981uarfqemjo3fmh8u8" />
     <meta name="p:domain_verify" content="6246a8dca9fae665fe60a7642143f89d"/>
     <meta charset="UTF-8" />
@@ -53,7 +54,23 @@ const ogImage = logoSrc.startsWith('http') ? logoSrc : `${siteUrl}${logoSrc}`;
       <!-- Klaviyo onsite script -->
       <script defer src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=T7LKGL"></script>
   
-    
+      <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1507536456910625');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1507536456910625&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->
 
     <!-- Shopify SDK (kept) -->
     <script src="https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js"></script>
